# vision

./: .clang-format  .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc.yaml  .travis.yml  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_MODELS.md  ClassName.txt  Deform_conv2d_kernals.metal  Dockerfile.cpu  Dockerfile.gpu  FORK.md  MANIFEST.in  ObjectDetection  README.md  README.rst  VIDEO_READER_MOVE_PLAN.md  benchmark_transforms.py  black.toml  browser-extension.json  check_pillow.py  clang-format-linux64  clang-format-mojave  damaged_jpeg.py  dev.py  docker-compose.yml  docker.sh  dummy.txt  hi  hub.py  hubconf.py  imagenet.categories  (+45 more)
android/ops/: CMakeLists.txt  build.gradle  gradle.properties
examples/cpp/: CMakeLists.txt  README.md  README.rst  run_model.cpp  script_model.py
examples/cpp/hello_world/: CMakeLists.txt  README.rst  main.cpp  trace_model.py
ios/: .gitignore  CMakeLists.txt  LibTorch_vision_ops.podspec  LibTorchvision.podspec  README.md  ReadMe.md  build_ios.sh  build_podspec.sh
ios/VisionTestApp/: Podfile  clean.sh  make_assets.py  setup.sh
ios/VisionTestApp/VisionTestApp/: AppDelegate.h  AppDelegate.m  Info.plist  ModelRunner.h  ModelRunner.mm  ViewController.h  ViewController.mm  main.m
ios/VisionTestApp/VisionTestApp.xcodeproj/: project.pbxproj
test/tracing/frcnn/: CMakeLists.txt  test_frcnn_tracing.cpp  trace_model.py
torchvision/: CMakeLists.txt  _C.cp37-win_amd64.pyd  _C.pyd  __init__.py  _autograd_registrations.py  _internally_replaced_utils.py  _meta_registrations.py  _register_extension.py  _utils.py  crash.py  cvtransforms.py  dev.py  extension.py  image.pyd  installTest.cpp  joint_transforms.py  lib_utils.py  temp.txt  tmp.py  transforms.py  utils.py
torchvision/cinclude/torchvision/: DeformConv.h  PSROIAlign.h  vision.h
torchvision/cmodels/: alexnet.cpp  alexnet.h  densenet.cpp  densenet.h  inception.cpp  inception.h  main.cpp  resnet.cpp  resnet.h  squeezenet.cpp  squeezenet.h  vgg.cpp  vgg.h  vision.h  visionimpl.h
torchvision/csrc/: DeformConv.h  DeformConv2d.h  PSROIAlign.h  PSROIPool.h  ROIAlign.h  ROIPool.h  StableABICompat.h  autocast.h  deform_conv2d.cpp  deform_conv2d.h  empty_tensor_op.h  image.h  macros.h  new_empty_tensor_op.cpp  new_empty_tensor_op.h  nms.cpp  nms.h  ops.cpp  ops.h  ops_autoregister.h  ps_roi_align.cpp  ps_roi_align.h  ps_roi_pool.cpp  ps_roi_pool.h  roi_align.cpp  roi_align.h  roi_pool.cpp  roi_pool.h  stable_abi_compat.h  vision.cpp  vision.h  vision_stable.cpp
torchvision/csrc/convert_models/: convert_models.cpp
torchvision/csrc/cpu/: DeformConv2d_cpu.cpp  DeformConv_cpu.cpp  PSROIAlign_cpu.cpp  PSROIPool_cpu.cpp  ROIAlign_cpu.cpp  ROIPool_cpu.cpp  deform_conv2d_cpu.cpp  deform_conv2d_kernel.cpp  deform_conv2d_kernel.h  nms_cpu.cpp  nms_kernel.cpp  nms_kernel.h  ps_roi_align_cpu.cpp  ps_roi_align_kernel.cpp  ps_roi_align_kernel.h  ps_roi_pool_cpu.cpp  ps_roi_pool_kernel.cpp  ps_roi_pool_kernel.h  roi_align_cpu.cpp  roi_align_kernel.cpp  roi_align_kernel.h  vision.h  (+4 more)
torchvision/cvtransforms/: __init__.py  cvfunctional.py  cvtransforms.py
torchvision/datapoints/: __init__.py  _bounding_box.py  _datapoint.py  _dataset_wrapper.py  _image.py  _mask.py  _torch_function_helpers.py  _video.py
torchvision/datasets/: __init__.py  _optical_flow.py  _stereo_matching.py  _utils.py  aircraft.py  caltech.py  camvid.py  celeba.py  cifar.py  cityscapes.py  clevr.py  coco.py  core50.py  country211.py  cub200.py  cub2011.py  dtd.py  eurosat.py  fakedata.py  fer2013.py  fgvc_aircraft.py  flickr.py  flowers102.py  folder.py  food101.py  forksafeziplookup.py  fvgc_aircraft.py  gtsrb.py  hmdb51.py  image.py  imagenet.py  imagenet_downsampled.py  imagenette.py  inaturalist.py  ipsc_luxor.py  kinetics.py  kinetics2.py  kinetics_new.py  kitti.py  lfw.py  (+32 more)
torchvision/io/: __init__.py  _load_gpu_decoder.py  _video_deprecation_warning.py  _video_opt.py  gpu_decoder.py  image.py  video.py  video_plus.py  video_reader.py  video_reader_api.py
torchvision/layers/: __init__.py  _utils.py  nms.h  nms.py  roi_align.py  roi_pool.py
torchvision/models/: __init__.py  _api.py  _utils.py  alexnet.py  alexnet_fixed.py  alexnet_onlyFullyConnected.py  convnext.py  deeplabv3.py  densenet.py  efficientnet.py  efficientnetv2.py  feature_extraction.py  googlenet.py  inception.py  inception_resv1_w.py  inceptionv4.py  maxvit.py  mnasnet.py  mobilenet.py  mobilenetv2.py  mobilenetv3.py  mobilevit.py  regnet.py  resnet.py  resnet_v2.py  resnet_with_k.py  resnext.py  segmentation.py  shufflenetv2.py  squeezenet.py  swin_transformer.py  unet.py  utils.py  vgg.py  vision_transformer.py  yolo.py
torchvision/ops/: __init__.py  _box_convert.py  _custom_ops.py  _masks.py  _masks_to_bounding_boxes.py  _masks_to_boxes.py  _onnx_ops.py  _register_onnx_ops.py  _utils.py  boxes.py  ciou_loss.py  dct.py  deform_attn.py  deform_conv.py  dice_loss.py  diou_loss.py  drop_block.py  dropblock.py  feature_pyramid_network.py  focal_loss.py  giou_loss.py  misc.py  new_empty_tensor.py  nms.py  onnx_ops.py  peak_detection.py  poly_loss.py  poolers.py  ps_roi_align.py  ps_roi_pool.py  roi_align.py  roi_pool.py  stochastic_depth.py
torchvision/prototype/: __init__.py  constants.py  features.py
torchvision/structures/: bounding_box.py
torchvision/transforms/: __init__.py  _functional_pil.py  _functional_tensor.py  _functional_video.py  _pil_constants.py  _presets.py  _transforms_video.py  autoaugment.py  container.py  convert.py  functional.py  functional_pil.py  functional_tensor.py  functional_video.py  opencv_functional.py  opencv_transforms.py  test.py  transforms.py  transforms_video.py
torchvision/tv_tensors/: __init__.py  _bounding_box.py  _bounding_boxes.py  _dataset_wrapper.py  _image.py  _keypoints.py  _mask.py  _torch_function_helpers.py  _tv_tensor.py  _video.py
torchvision/vision_tensors/: __init__.py  _bounding_box.py  _dataset_wrapper.py  _image.py  _mask.py  _torch_function_helpers.py  _video.py  _vision_tensor.py
(+6538 files in other folders)
