[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.isort]
# See link below for available options
# https://pycqa.github.io/isort/docs/configuration/options.html

profile = "black"
line_length = 120

skip_gitignore = true
order_by_type = true
combine_as_imports = true
combine_star = true
float_to_top = true
color_output = true

known_first_party = ["torch", "torchvision"]
known_local_folder = [
    "_utils_internal",
    "common_utils",
    "dataset_utils",
]

skip = ["gallery"]


[tool.black]
# See link below for available options
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file

line-length = 120
target-version = ["py36"]

exclude = "gallery"
extend_exclude = true