[tool.usort]

first_party_detection = false

[tool.black]

line-length = 120
target-version = ["py38"]

[tool.ufmt]

excludes = [
    "gallery",
]

[build-system]

requires = ["setuptools" @ git+https://github.com/pypa/setuptools.git@main, "torch", "wheel" @ git+https://github.com/pypa/wheel.git@main]
