[tool.usort]
first_party_detection = false

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.ufmt]
excludes = [
    "gallery",
]

[build-system]
requires = ["setuptools", "torch", "wheel"]

[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[tool.uv]
managed = true
package = false  # 👈️ 自身をパッケージとしてビルド・インストールするのを防ぎます

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
