[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[pep8]
max-line-length = 120

[flake8]
max-line-length = 120
ignore = E203, E402, W503, W504, F821
per-file-ignores =
    __init__.py: F401, F403, F405
    ./hubconf.py: F401
    torchvision/models/mobilenet.py: F401, F403
    torchvision/models/quantization/mobilenet.py: F401, F403
    test/smoke_test.py: F401
exclude = venv

[pydocstyle]
select = D417 # Missing argument descriptions in the docstring

[isort]
# See link below for available options
# https://pycqa.github.io/isort/docs/configuration/options.html

profile = black
line_length = 120

skip_gitignore = true
order_by_type = true
combine_as_imports = true
combine_star = true
float_to_top = true
color_output = true

known_first_party =
    torch,
    torchvision
known_local_folder =
    _utils_internal
    common_utils
    dataset_utils


skip =
    gallery